--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,11 +15,11 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        working-directory: ./
+        working-directory: ./stream-vibe/
         run: npm install
 
       - name: Build Minista
-        working-directory: ./
+        working-directory: ./stream-vibe/
         run: npm run build
 
       - name: Deploy to GitHub Pages
